# zfs_snapshot

./: LICENSE  README.md  pyproject.toml
.github/workflows/: basic-ci.yml
src/zfs_snapshot/: __init__.py  __main__.py  zfs_snapshot.py
tests/: test___main__.py  test_zfs_snapshot.py
